Fixed alignment on mobile for links and close button.

--- a/src/components/SideDrawer/CloseButton.css
+++ b/src/components/SideDrawer/CloseButton.css
@@ -1,5 +1,4 @@
 .float-right{
   float: right;
-  margin: 5px;
-  padding: 5px;
+  padding: 10px;
 }
