--- a/src/components/SideDrawer/SideDrawer.css
+++ b/src/components/SideDrawer/SideDrawer.css
@@ -10,6 +10,8 @@
   z-index: 4;
   transform: translateX(-100%);
   transition: transform 0.3s ease-out;
+  display: flex;
+  flex-direction: column;
 }
 
 .side-drawer.open {
